--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+             <sonar.host.url>http://34.125.135.231:9000/</sonar.host.url>
+    <sonar.login>squ_8112a7745a40ad6758d82d50ee94f760dd0b4abc</sonar.login>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <jackson-dataformat-yaml.version>2.14.2</jackson-dataformat-yaml.version>
